do practice to org files

--- a/org/first.practice.org
+++ b/org/first.practice.org
@@ -1,6 +1,3 @@
-;; This buffer is for text that is not saved, and for Lisp evaluation.
-;; To create a file, visit it with C-x C-f and enter text in its buffer.
-
 * This is a heading
 
 This is a paragraph
@@ -31,8 +28,9 @@ Numbered list
 5. whatever else
 
 * Another heading
-
 ** Subheading (level 2) will allow the heading to fold the subhead like so
+*** Third subheading (level 3)
+**** Fourth level heading
 
 *** C-<RET> will create another heading below the prior heading
 Note: M-<arrow> will indent the subheading to your levels of choice
@@ -43,15 +41,16 @@ C-c C-, will show you menu of org priority blocks to insert
 #+end_src
 Note: M-x org-indent-mode will indent the whole buffer like this one now.
 
-* TODO This heading as progress list [2/2][100%]
+* DONE This heading as progress list [2/2][100%]
+CLOSED: [2023-09-10 Sun 11:10]
 
 ** DONE To mark each todo as done press C-c C-t to toggle their status. Tip: use the menu to aid you what commands to execute.
 CLOSED: [2023-09-05 Tue 21:29]
 ** DONE Note: S-M-<RET> will create another todo heading
 CLOSED: [2023-09-05 Tue 21:30]
 
-* TODO Do LM with CTB. Note the time stamp created by C-c C-d [/] :private:sex:lm
-DEADLINE: <2023-09-08 Fri 20:00>
+* DONE Do LM with CTB. Note the time stamp created by C-c C-d [/] :private:sex:lm
+CLOSED: [2023-09-10 Sun 11:09] DEADLINE: <2023-09-08 Fri 20:00>
 
 ** TODO Start working on my book (scheduled entry example) C-c C-s. Add deadline by hitting C-c C-d :book:project
 DEADLINE: <2023-10-25 Wed> SCHEDULED: <2023-09-25 Mon>
@@ -67,8 +66,7 @@ DEADLINE: <2023-10-25 Wed> SCHEDULED: <2023-09-25 Mon>
 ** How to activate the agenda buffer and do the navigation?
 
 * To add tags to the todo entries add :tag-name next to the entry e.g.
-
-** TODO Followup asap the cancellation of the fucking BPI cards :bank:bpi:credit-cards
-DEADLINE: <2023-09-08 Fri>
+** DONE Followup asap the cancellation of the fucking BPI cards :bank:bpi:credit-cards
+CLOSED: [2023-09-10 Sun 11:18] DEADLINE: <2023-09-08 Fri>
 
 ** Tip: avoid using priorities in the agenda to make your life simple. The more entries in your agenda the more chaotic it will become and this will demotivate you.
