--- a/notes/20240418T050627--my-ttd-in-eos-nuc-machine__priv.org
+++ b/notes/20240418T050627--my-ttd-in-eos-nuc-machine__priv.org
@@ -6,7 +6,9 @@
 * Begin my TTD list in this machine.
 
 * FYI: sly mode seems to be working.
-** Resume learning Common Lisp Udemy course.
+** TODO Resume learning Common Lisp Udemy course.
+** TODO Learn Git-it
+** TODO Learn nyxt cli browser.
 * Install apps of choice:
 ** wezterm, kitty
 ** vorta backup client
@@ -14,10 +16,13 @@
 CLOSED: [2024-04-18 Thu 05:19]
 
 ** DONE zellij.
-** github-cli
+** DONE github-cli
+CLOSED: [2024-04-19 Fri 17:14]
 ** git-it (learn this)
-* set up .gitconfig using gh client.
-* setup dotfiles for this box, get from github repos, setup bash aliases. see them in ~/downloads folder.
+* DONE set up .gitconfig using gh client.
+CLOSED: [2024-04-19 Fri 17:14]
+* DONE setup dotfiles for this box, get from github repos, setup bash aliases. see them in ~/downloads folder.
+CLOSED: [2024-04-19 Fri 17:14]
 * add more as needed.
 
 * Apps installed to date:
