--- a/notes/20240313T150707--ttd-t460-machine__emacs.org
+++ b/notes/20240313T150707--ttd-t460-machine__emacs.org
@@ -7,12 +7,18 @@
 
 ** Add open items here:
 *** Make list of Uriel items for Ileco net-metering application.
+*** Email CV to Fahad Aljeld re apply in Jafurah project.
 *** Send balance 20K to sjp bpi re June home budget.
 *** Pay riyadbank ccard due 207.61 due date 6/28/24.
 *** Install latest nixos 24.05 in dell precibox laptop.
-*** Msg Joseph/Dennis re UGMP doc requirements
-*** add more here.
-*** Readup man/help page of axel readarr, radarr
+*** Readup man/help page and learn axel, readarr, radarr.
+*** == separator ==
+*** DONE Organize CHED documents in Google drive erimendz.
+CLOSED: [2024-06-05 Wed 12:01]
+*** DONE Reply to job apply invite of Dalma Energy https://dalmaenergy.ae/contact-2/index.htm
+CLOSED: [2024-06-05 Wed 12:00]
+*** DONE Msg Joseph/Dennis re UGMP doc requirements
+CLOSED: [2024-06-05 Wed 11:04]
 *** DONE Readup man page shutdown, halt, reboot.
 CLOSED: [2024-06-05 Wed 10:47]
 *** DONE Check myPH bank SOAs then update online tracking.
