add done, new todo items

--- a/notes/20240313T150707--ttd-t460-machine__emacs.org
+++ b/notes/20240313T150707--ttd-t460-machine__emacs.org
@@ -6,15 +6,20 @@
 * Begin my things to do in this box
 
 ** Add open items here:
+*** Setup nixos 24.05 laptop.
 *** Try out FG editor an emacs-clone https://devheroes.codes/FG42/FG42
+*** Learn more about Flakehub https://flakehub.com/
 *** Send balance 23K (add 3k for rose borrow) to sjp bpi re June home budget.
 *** Email CV to Fahad Aljeld re apply in Jafurah project.
 *** Pay riyadbank ccard due 207.61 due date 6/28/24.
-*** Install latest nixos 24.05 in dell precibox laptop.
 *** Readup man/help page and learn axel, readarr, radarr.
 **** https://readarr.com/#downloads-v1-linux
 **** http://localhost:8787/
 *** == separator ==
+*** DONE Do DL of beautiful music history in my YT channel, upload to Gdrive.
+CLOSED: [2024-06-06 Thu 08:22]
+*** DONE Install latest nixos 24.05 in dell precibox laptop.
+CLOSED: [2024-06-06 Thu 07:38]
 *** DONE Make list of Uriel items for Ileco net-metering application and share to him/sjp.
 CLOSED: [2024-06-05 Wed 14:35]
 *** DONE Organize CHED documents in Google drive erimendz.
